# hello_cmake

./: CMakeLists.txt
boost-hello/: CMakeLists.txt
boost-hello/src/boost-hello/: CMakeLists.txt  boost-hello.cpp  boost-hello.hpp  numerics-hello.hpp
hello-exe/: CMakeLists.txt  main.cpp  src1.h  src2_lib2.cpp  src2_lib2.h  src_lib3.cpp  src_lib3.h
say-hello/: CMakeLists.txt
say-hello/src/say-hello/: hello.cpp  hello.h
